basic and complete

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 </head>
 <body>
   <h1>Here's a random user</h1>
-
-<!-- output div -->
-
-<!-- handlebars script -->
-
-<!-- regular javascript scripts -->
+  <div id="userGoesHere"></div>
+  <script id="userScript" type="text/x-handlebars-template">
+    <div class="user">
+      <h1>{{results.0.name.title}}. {{results.0.name.first}} {{results.0.name.last}}</h1>
+      <h5>{{results.0.location.street}}</h5>
+      <h5>{{results.0.location.city}}, {{results.0.location.state}}</h5>
+      <h5>{{results.0.location.postcode}}</h5>
+      <h5>Email: {{results.0.email}}</h5>
+    </div>
+  </script>
+  <script type="text/javascript" src="/bower_components/jQuery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="/bower_components/handlebars/handlebars.js"></script>
+  <script type="text/javascript" src="myJavascript.js"></script>
 </body>
 </html>
