now, with picture

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h5>{{results.0.location.city}}, {{results.0.location.state}}</h5>
       <h5>{{results.0.location.postcode}}</h5>
       <h5>Email: {{results.0.email}}</h5>
+      <img src={{results.0.picture.large}}>
     </div>
   </script>
   <script type="text/javascript" src="/bower_components/jQuery/dist/jquery.min.js"></script>
