--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <title>Handlebars Exercise</title>
 </head>
 <body>
-  <h1>Here's a random user</h1>
+  <h1>Here's a random user:</h1>
 
-<!-- output div -->
+  <!-- output div -->
 
-<!-- handlebars script -->
+  <!-- handlebars script -->
 
-<!-- regular javascript scripts -->
+  <!-- regular javascript scripts -->
+  <script src="bower_components/jQuery/dist/jquery.min.js" type="text/javascript"></script>
+  <script src="bower_components/handlebars/handlebars.js" type="text/javascript"></script>
+  <script src="myJavascript.js" type="text/javascript"></script>
 </body>
 </html>
