--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <!-- output div -->
 
   <!-- handlebars script -->
+  <script id="userEntry" type="text/x-handlebars-template">
+
+  </script>
 
   <!-- regular javascript scripts -->
   <script src="bower_components/jQuery/dist/jquery.min.js" type="text/javascript"></script>
