added output div

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Here's a random user:</h1>
 
   <!-- output div -->
+  <div id="user-output"></div>
 
   <!-- handlebars script -->
   <script id="userEntry" type="text/x-handlebars-template">
